# BSU-Operation-Systems

./: Main.cpp  Matrix.cpp  Matrix.h  Multiplication.cpp  Multiplication.h  Number.cpp  Number.h  NumberLib.vcxproj  Thread.vcxproj  Thread.vcxproj.filters  Vector.cpp  Vector.h  VectorLib.vcxproj  build.ps1  main.cpp
Debug/: NumberLib.idb  NumberLib.pch  NumberLib.vcxproj.FileListAbsolute.txt  VectorLib.dll.recipe  vc142.idb
Debug/NumberLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  NumberLib.lastbuildstate
Debug/VectorLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VectorLib.lastbuildstate  VectorLib.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LibTest/: CMakeLists.txt  LibTest.cpp
NumberLib/: CMakeLists.txt  Number.cpp  Number.h  main.cpp
VectorLib/: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
